--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "build:ios": "expo build:ios"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/server": "^0.6.3",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.10.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
@@ -40,10 +45,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "@expo/metro-runtime": "~5.0.4",
-    "expo-linear-gradient": "~14.1.5",
-    "@react-native-masked-view/masked-view": "0.3.2"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
